--- a/src/pages/LandingPage.scss
+++ b/src/pages/LandingPage.scss
@@ -1,19 +1,13 @@
-
-.teste{
- width: 100%;
+.teste {
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  
-  
 }
 .page-wrapper {
- 
-  min-height: 400px;     // fallback
-  height: 100%;    // mobile fix
+  min-height: 400px; // fallback
+  height: 100%; // mobile fix
   display: flex;
   flex-direction: column;
   align-items: left;
-  outline: 2px solid red;
-  
 }
